--- a/wiki/pot.wikitext
+++ b/wiki/pot.wikitext
@@ -11,7 +11,7 @@
 # A [[vessel]] used for [[cook]]ing or [[store|storing]] food.
 # The [[money]] [[wager]]ed in [[poker]] or similar [[game]]s.
 # A [[trap]] for [[catch]]ing [[lobster]]s, [[crab]]s, or [[fish]].
-# (''Slang'') A nickname for the [[drug]] [[marijuana]].
+# (''Slang, mass noun'') A nickname for the [[drug]] [[marijuana]].
 # (''Archaic'') An iron [[hat]] with a broad [[brim]].
 #:'''Quotations'''
 #:*'''1786''':  The pot is an iron hat with broad brims: there are many under the denomination in the Tower, said to have been taken from the French; one of them is represented in plat 7, fig. 1 and 2. &mdash; Francis Grose, ''A Treatise on Ancient Armour and Weapons'', page 12.
