--- a/wiki/fucker.wikitext
+++ b/wiki/fucker.wikitext
@@ -1,9 +1,10 @@
+== English ==
 == Noun ==
-
-# (vulgar) An undesirable person.  See also [[motherfucker]], [[pigfucker]], [[pissbutt]]
+'''fucker''' (''plural: fuckers'')
+# (''vulgar'') An undesirable person.  See also [[motherfucker]], [[pigfucker]], [[pissbutt]]
 #: ''You fucker, you wrecked my car!''
-# (vulgar) The object of some effort. See also [[puppy]], [[bad boy]].
+# (''vulgar'') The object of some effort. See also [[puppy]], [[bad boy]].
 #: ''Let's see if we can fix this fucker''
-# (vulgar slang) People, friends, especially of very high solidarity.
+# (''vulgar, slang'') People, friends, especially of very high solidarity.
 #: ''What's up, fuckers?!''
-# (very rare) one who [[fuck]]s
+# (''rare'') one who [[fuck]]s
