--- a/wiki/rip.wikitext
+++ b/wiki/rip.wikitext
@@ -5,6 +5,10 @@
 
 ===Verb===
 '''to rip''' ([[rips]], [[ripped]], [[ripping]])
+#To cause something, usually paper, to rapidly become two parts.
+
+'''to rip it up''' (''ripping it up'')
+#To show especial skill in sports such as [[surfing]], [[skateboarding]], even [[hackysack]].
 
 ====Synonyms====
 *[[tear]]
