--- a/wiki/rip.wikitext
+++ b/wiki/rip.wikitext
@@ -28,4 +28,8 @@
 ====Related terms====
 *[[riptide]]
 
+===Adjective===
+'''ripped''' (''pp. of ''to rip'''')
+#Affected or [[intoxicated]] by [[marijuana]]; [[high]].
+
 [[pl:Rip]]
