--- a/wiki/rip.wikitext
+++ b/wiki/rip.wikitext
@@ -29,7 +29,7 @@
 *[[riptide]]
 
 ===Adjective===
-'''ripped''' (''pp. of ''to rip'''')
+'''ripped''' (''pp. of to rip'')
 #Affected or [[intoxicated]] by [[marijuana]]; [[high]].
 
 [[pl:Rip]]
