--- a/wiki/rip.wikitext
+++ b/wiki/rip.wikitext
@@ -8,7 +8,7 @@
 #To cause something, usually paper, to rapidly become two parts.
 
 '''to rip it up''' (''ripping it up'')
-#To show especial skill in sports such as [[surfing]], [[skateboarding]], even [[hackysack]].
+#To show especial skill in sports such as [[surfing]], [[skateboarding]], even [[hackeysack]].
 
 ====Synonyms====
 *[[tear]]
