--- a/wiki/pimp.wikitext
+++ b/wiki/pimp.wikitext
@@ -8,7 +8,7 @@
 '''pimp''' ([[pimps]], [[pimping]], [[pimped]])
 # To procure women for the gratification of others' lusts; to [[pander]].
 # Slang term used by the medical profession for when the attending physician asks an impossible to answer question of a resident or medical student.
-# ''(US, colloquial, automotive):'' [[excessive]]ly [[gaudy]]; [[absurd]]ly [[ostentatious]], so as to advertise that the vehicle driver is a pimp.
+# ''(US, colloquial, automotive):'' To [[excessive]]ly customise a car, so as to advertise that the vehicle driver is a pimp.
 #:''Yo, those 21 inch spinners really '''pimp''' that minivan.''
 
 [[de:pimp]]
