--- a/wiki/cuckold.wikitext
+++ b/wiki/cuckold.wikitext
@@ -1,4 +1,6 @@
 ==English==
+====Etymology====
+from Cuckoo, a bird that lays its eggs in another's nest.
 ===Noun===
 '''cuckold'''
 #(''dated'') a [[man]] [[married]] to an [[unfaithful]] [[wife]]
