[[a3]] moved to [[A3]]: fix case <a3#172868>

--- a/wiki/A3.wikitext
+++ b/wiki/A3.wikitext
@@ -1,7 +1,1 @@
-==English==
-
-===Noun===
-'''A3'''
-# ''{{Abbreviation}}, printing:'' A standard paper size, which is the size of two A4 pages.
-
-{{wikipedia}}
+#redirect [[A3]]
