--- a/wiki/acme.wikitext
+++ b/wiki/acme.wikitext
@@ -1,15 +1,8 @@
 ==English==
-===Etymology===
-Greek ακμή - [[point]], [[top]]; [[acne]].
-===Noun===
-'''acme'''
+==={{acronym}}===
+'''ACME'''
 
-# The top or highest point; the culmination.
-#:'''Quotations'''
-#:* The very '''acme''' and pitch of life for epic poetry. - [[Alexander Pope]]
-#:* The moment when a certain power reaches the '''acme''' of its supremacy. - [[I. Taylor?]]
-#''(Medicine):'' The crisis or height of a disease.
-# Mature age; full bloom of life. - [[Ben Jonson]]
+#A Company [that] Makes Everything: [[Wile E. Coyote]]'s supplier of equipment and [[gadget]]s.
 
-[[it:acme]]
-[[Category:Greek derivations]]
+===See also===
+*[[acme]]
