[[aD]] moved to [[AD]] <AD#1707>

--- a/wiki/AD.wikitext
+++ b/wiki/AD.wikitext
@@ -1,1 +1,21 @@
-#redirect [[ad]]
+==English==
+==={{initialism}}===
+
+#Latin ''[[Anno Domini#Latin|anno domini]]'', in the year of (our) Lord, used to specify years counting from the birth of Christ (AD 1).
+
+====Usage notes====
+*'''AD''' is used before the year number.  Thus correct usage is "AD 2000", not "2000 AD".
+*Some authors prefer to use [[BCE]] (before the common era), which does not show Christian bias.
+
+====Translations====
+*French: [[ap. JC]] (''après Jésus-Christ''), [[en l'an de grâce]] (''archaic'')
+*{{ms}}: [[M]] (''Masihi'')
+*{{lt}}: [[m.e]] ''f''
+
+
+===See also===
+*[[BC]]
+*[[BCE]]
+*[[CE]]
+
+[[pl:AD]]
