[[aNA]] moved to [[ANA]] <ANA#96020>

--- a/wiki/ana.wikitext
+++ b/wiki/ana.wikitext
@@ -1,1 +1,6 @@
-#redirect [[ana]]
+==English==
+==={{initialism}}===
+'''ANA'''
+
+#[[w:All Nippon Airways|All Nippon Airways]]
+#[[w:American Nurses Association|American Nurses Association]]
