[[aSP]] moved to [[ASP]] <ASP#22119>

--- a/wiki/ASP.wikitext
+++ b/wiki/ASP.wikitext
@@ -1,1 +1,10 @@
-#redirect [[asp]]
+==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
+
+Active Server Pages
+
+
+see also http://lambda.vze.com/wiki.asp
+
+download http://wiki.bilog.2ya.com
+
+[[fr:ASP]]
