[[a4]] moved to [[A4]]: fix case <a4#172914>

--- a/wiki/A4.wikitext
+++ b/wiki/A4.wikitext
@@ -1,23 +1,1 @@
-=={{En}}==
-===Noun===
-'''A4'''
-
-# A standard [[paper]] size, defined by the international standard ISO 216 as 210 x 297 mm.  Often used attributively.
-#: ''This printer can handle Letter, Legal and A4.''
-#: ''Hand me a sheet of A4 paper, please.''
-
-====See also====
-*[[A1]]
-*[[A2]]
-*[[A3]]
-*[[A5]]
-*[[A6]]
-*[[foolscap]]
-
-===Proper noun===
-'''A4'''
-
-# A major thoroughfare in England
-#: ''There is a long tailback on the A4, due to an accident.''
-
-[[pt:A4]]
+#redirect [[A4]]
