[[aB]] moved to [[AB]] <AB#5390>

--- a/wiki/ab.wikitext
+++ b/wiki/ab.wikitext
@@ -1,1 +1,17 @@
-#redirect [[ab]]
+==English==
+
+==={{Abbreviation}}===
+'''AB'''
+#[[Alberta]] (Canadian province)
+
+===Noun===
+'''AB'''
+# A [[blood type]] that has a both blood antigens.  They can receive blood from type [[A]], [[B]], [[AB]] or type [[O]], but cannot give blood to any other blood type.
+
+----
+==Swedish==
+===Noun===
+# Blood type AB
+# Abbreviation for [[Aktiebolag]]
+
+[[sv:AB]]
