--- a/wiki/ADA.wikitext
+++ b/wiki/ADA.wikitext
@@ -1,1 +1,8 @@
-#redirect [[ada]]
+===Abbreviation===<!-- sure this is not an acronym? -->
+'''ADA'''
+
+# American Dental Association
+# Americans for Democratic Action - ''liberal pressure group''
+
+===See also===
+* [[Ada]]
