[[aDO]] moved to [[ADO]] <ADO#37792>

--- a/wiki/ADO.wikitext
+++ b/wiki/ADO.wikitext
@@ -1,1 +1,9 @@
-#redirect [[ado]]
+==English==
+===Abbreviation===
+#ActiveX Data Objects
+
+----
+
+==Spanish==
+===Abbreviation===
+#Autobuses de Oriente, a long-distance bus (coach) company in Mexico
