[[aL]] moved to [[AL]] <AL#2050>

--- a/wiki/AL.wikitext
+++ b/wiki/AL.wikitext
@@ -1,1 +1,15 @@
-#redirect [[al]]
+==English==
+
+==={{Abbreviation}}===
+#[[Alabama]], a {{USstate}}
+----
+==Spanish==
+===Abbreviation===
+#[[América Latina]]
+----
+==Portuguese==
+===Abbreviation===
+#[[Alagoas]] (Brazilian state)
+
+[[pl:AL]]
+[[zh:AL]]
