[[aM]] moved to [[AM]] <AM#2164>

--- a/wiki/AM.wikitext
+++ b/wiki/AM.wikitext
@@ -1,1 +1,13 @@
-#redirect [[am]]
+==English==
+===Abbreviation===
+#(Sometimes lower case) From Latin [[ante meridiem]], meaning "before [[noon]] (12:00)".
+#*''See also:'' [[A.M.]]
+#Amplitude Modulation
+#*''Contrasted with'' [[FM]]
+#Assembly Member: a title similar to MP, placed after the name of a Member of the Welsh National Assembly.
+
+----
+
+==Portuguese==
+===Abbreviation===
+#[[Amazonas]] (Brazilian state)
