[[aS]] moved to [[AS]] <AS#37527>

--- a/wiki/as.wikitext
+++ b/wiki/as.wikitext
@@ -1,1 +1,8 @@
-#redirect [[as]]
+===Abbreviation===
+
+*[[Anglo-Saxon]]
+*[[Advanced Supplementary]]
+*[[Asperger's Syndrome]]
+
+[[pl:AS]]
+[[fi:AS]]
