added ety. stub cat <nip#50374>

--- a/wiki/nip.wikitext
+++ b/wiki/nip.wikitext
@@ -76,3 +76,4 @@ to '''nip'''
 [[Category:English slang]]
 [[Category:English verbs]]
 [[Category:English vulgarities]]
+[[Category:Etymology stub]]
