moved from "noongar" <Noongar#143296>

--- a/wiki/Noongar.wikitext
+++ b/wiki/Noongar.wikitext
@@ -1,1 +1,17 @@
-#redirect [[noongar]]
+{{wikipedia}}
+
+==English==
+===Proper noun===
+''Noongar'', or ''Nyungar'', or ''Nyoongar''
+
+# an [[indigenous]] [[peoples|people]] of southwestern [[Australia]]
+# the common [[language]] of an indigenous people of southwestern Australia
+
+===Adjective===
+''Noongar'', or ''Nyungar'', or ''Nyoongar''
+
+# [[pertain]]ing to and/or [[describe|describing]] either the language, [[person]]s or [[culture]] of the Noongar people
+
+[[Category:Languages]]
+[[Category:Pronunciation stub]]
+[[Category:Etymology stub]]
