--- a/wiki/AT%26T.wikitext
+++ b/wiki/AT%26T.wikitext
@@ -1,1 +1,5 @@
-American Telephone & Telegraph
+== English ==
+{{wikipedia}}
+=== Noun ===
+'''AT&T'''
+#the name of an American telecommunications company; an [[initialism]] for ''American Telephone & Telegraph'', the corporations former name
