--- a/wiki/kind.wikitext
+++ b/wiki/kind.wikitext
@@ -1,23 +1,13 @@
-==English==
+==German==
 ===Pronunciation===
-*[[w:AHD|AHD]]: /kīnd/
-*[[w:IPA|IPA]]: /kaɪnd/
-*[[w:SAMPA|SAMPA]]: /kaInd/
+*[[w:IPA|IPA]]: /kɪnt/
+*[[w:SAMPA|SAMPA]]: /kInt/
 
 ===Noun===
-'''kind'''
+'''Kind''' ''n'' (Plural: [[Kinder]], diminutive: [[Kindchen]])
 
-#[[type]], [[race]]
-#: a kind of
-#appearance
-#character, type
-#nature
-#without money
-
-====Synonyms====
-*[[genre]]
-*[[sort]]
-*[[type]]
+#young person
+#offspring
 
 ====Translations====
 {| border=0 width=100%
@@ -25,36 +15,10 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
-*Catalan: [[tipus]] ''m'', [[gènere]] ''m'', [[classe]] ''f''
-*Dutch: [[type]] ''n'', [[aard]] ''m'', [[geslacht]] ''n'', [[ras]] ''n'', [[soort]] ''f'', [[karakter]] ''n''
-*French: [[genre]] ''m'', [[sorte]] ''f''
-*German: [[Art]] ''f''
-*[[Ido]]: [[sorto]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from J to Z go here-->
-*Spanish: [[tipo]] ''m'', [[género]] ''m'', [[clase]] ''f''
-|}
-|}
-
-===Adjective===
-'''kind'''
-
-#[[nice]]
-#[[favorable]]
-[[Category:Positive words]]
-====Translations====
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to I go here-->
-*Dutch: [[aardig]] (1), [[leuk]] (1), [[lief]] (1), [[mooi]] (1), [[prettig]] (1), [[gunstig]] (2)
-*French: [[gentil]], [[favorable]]
-*German: [[freundlich]] (1), [[gütig]] (1), [[lieb]] (1, 2), [[liebenswürdig]] (1, 2), [[nett]] (1, 2)
-*[[Ido]]: [[benigna]], [[afabla]]
+*English: [[child]] (1,2)
+*Esperanto: [[geknabo]]
+*Finnish: [[lapsi]] ([[:fi:lapsi|Suomi]])
+*French: [[enfant]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -63,53 +27,5 @@
 |}
 |}
 
-----
-
-==Dutch==
-===Pronunciation===
-*[[w:IPA|IPA]]: /kɪnd/
-*[[w:SAMPA|SAMPA]]: /kInd/
-
-===Noun===
-'''kind''' ''n'' (Plural: [[kinderen]], diminutive: [[kindje]])
-
-#[[child]]
-#[[offspring]]
-
-
-----
-
-
-
-==Swedish==
-===Noun===
-'''kind'''
-
-#[[cheek]]; a part of the face.
-
-{| border=1 cellspacing=0
-| bgcolor="#FFFFF0" colspan=5 align=center | '''Common'''
-|-
-|- bgcolor="#FFFFF0" align=center
-! rowspan=2 | 
-| colspan=2 width=105| Singular 
-| colspan=2 | Plural
-|- bgcolor="#FFFFF0" align=center
-| width=105 | ''Indefinite'' 
-| width=105 | ''Definite'' 
-| width=105 |  ''Indefinite'' 
-|  width=105 | ''Definite''
-|- align=center
-| width=105 bgcolor="#FFFFF0" | ''Nominative'' 
-| [[kind]]
-| [[kinden]]
-| [[kinder]]
-| [[kinderna]]
-|- align=center
-| width=105 bgcolor="#FFFFF0" | ''Genitive'' 
-| [[kinds]]
-| [[kindens]]
-| [[kinders]]
-| [[kindernas]]
-|}
-[[Category:1000 English basic words]]
+== See also ==
+*[[kind]]
