added cat <Japanophilia#100720>

--- a/wiki/Japanophilia.wikitext
+++ b/wiki/Japanophilia.wikitext
@@ -1,8 +1,4 @@
 ==English==
-
-===Pronunciation===
-{{substub}}
-
 ===Etymology===
 [[English]]; '''[[Japan]]''' + {{Gr.}}; '''[[φιλια]]'''&mdash;''(fraternal) [[love]]''
 
@@ -19,3 +15,4 @@
 [[Category:English nouns]]
 [[Category:Greek derivations]]
 [[Category:Psychology]]
+[[Category:Pronunciation stub]]
