/* Related Terms */ <Japanophilia#100720>

--- a/wiki/Japanophilia.wikitext
+++ b/wiki/Japanophilia.wikitext
@@ -7,10 +7,9 @@
 
 # the [[obsession]] with or [[love]] of the [[country]], [[culture]] or [[people]] of [[Japan]]
 
-===Related Terms===
+===Related terms===
 * [[-philia]]
 * [[Japanophile]]
-{{substub}}
 
 [[Category:English nouns]]
 [[Category:Greek derivations]]
