/* See Also */ <peeler#98207>

--- a/wiki/peeler.wikitext
+++ b/wiki/peeler.wikitext
@@ -20,7 +20,7 @@ From the [[surname]] of '''[[w:Robert Peel|Sir Robert Peel]]''', who [[establish
 
 # ''(colloquial, slang, British)'' a [[police]] [[officer]]
 
-===See Also===
+===See also===
 * [[bobby]]
 
 [[Category:Colloquial]]
