cleaned up <peeler#98207>

--- a/wiki/peeler.wikitext
+++ b/wiki/peeler.wikitext
@@ -1,29 +1,23 @@
 ==English==
-
-===Pronunciation===
-{{substub}}
-
-===Etymology (1)===
+===Etymology 1===
 English; verb '''to [[peel]]''' + suffix '''[[-er]]'''
 
-===Etymology (2)===
-From the [[surname]] of '''[[w:Robert Peel|Sir Robert Peel]]''', who [[establish]]ed [[London]]'s [[police]] force.
-
-===Noun (1)===
+====Noun====
 ''peeler''
 
 # ''(agricultural; culinary)'' one whose [[function]] it is to [[peel]] [[fruit]] or [[vegetable]] [[produce]]
 
-===Noun (2)===
+===Etymology 2===
+From the [[surname]] of '''[[w:Robert Peel|Sir Robert Peel]]''', who [[establish]]ed [[London]]'s [[police]] force.
 
-''Peeler'' 
+====Noun====
+''peeler'', or ''Peeler''
 
-# ''(colloquial, slang, British)'' a [[police]] [[officer]]
+# ''(colloquial, slang, British)'' a [[police officer]]
 
-===See also===
+====Synonyms====
 * [[bobby]]
 
 [[Category:Colloquial]]
 [[Category:English nouns]]
 [[Category:English slang]]
-[[Category:Dated]]
