cleaned up <Torres Strait Creole#38196>

--- a/wiki/Torres_Strait_Creole.wikitext
+++ b/wiki/Torres_Strait_Creole.wikitext
@@ -1,13 +1,6 @@
 {{wikipedia}}
 
 ==English==
-
-===Pronunciation===
-{{substub}}
-
-===Etymology===
-{{etystub}}
-
 ===Proper noun===
 ''Torres Strait Creole'', also ''Torres Strait Pidgin, Torres Strait Broken, Cape York Creole, Lockhart Creole''
 
@@ -20,4 +13,6 @@
 * [[Meryam Mir]]
 * [[Torres Strait]]
 
+[[Category:Etymology stub]]
 [[Category:Languages]]
+[[Category:Pronunciation stub]]
