--- a/wiki/resistance.wikitext
+++ b/wiki/resistance.wikitext
@@ -1,9 +1,10 @@
 ==English==
 ===Noun===
 '''resistance'''
-#The [[act]] of [[resist]]ing, or the [[capacity]] to resist.
-#A [[force]] that [[tend]]s to [[oppose]] [[motion]].
-#(''Electricity'') The [[opposition]] of a body to the [[flow]] of [[current]], resulting in a [[conversion]] of electrical [[energy]] into [[heat]] and [[radiation]]. Measured in [[ohm]]s.
+# the [[act]] of [[resist]]ing, or the [[capacity]] to resist
+# (''physics'') [[force]] that [[tend]]s to [[oppose]] [[motion]].
+# (''physics'') the [[opposition]] of a body to the [[flow]] of [[current]], resulting in a [[conversion]] of electrical [[energy]] into [[heat]] and [[radiation]]. Measured in [[ohm]]s.
+# an [[underground]] [[organization]] engaged in a [[struggle]] for [[liberation]] from [[forceful]] [[occupation]]
 
 ====Translations====
 *Finnish: [[resistanssi]] (3)
