--- a/wiki/resistance.wikitext
+++ b/wiki/resistance.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''resistance'''
 # the [[act]] of [[resist]]ing, or the [[capacity]] to resist
-# (''physics'') [[force]] that [[tend]]s to [[oppose]] [[motion]].
+# (''physics'') a [[force]] that [[tend]]s to [[oppose]] [[motion]]
 # (''physics'') the [[opposition]] of a body to the [[flow]] of [[current]], resulting in a [[conversion]] of electrical [[energy]] into [[heat]] and [[radiation]]. Measured in [[ohm]]s.
 # an [[underground]] [[organization]] engaged in a [[struggle]] for [[liberation]] from [[forceful]] [[occupation]]
 
