--- a/wiki/nation.wikitext
+++ b/wiki/nation.wikitext
@@ -1,1 +1,41 @@
-#redirect [[nation]]
+==English==
+
+=== Pronunciation ===
+*nā'shən, /ˈneɪʃən/, /<tt>"neIS@n</tt>/
+*:[[Rhymes:English:-eɪʃən|Rhymes: -eɪʃən]]
+
+===Noun===
+'''nation''' ([[nations]])
+
+# A group of people sharing aspects of language, culture and/or ethnicity.
+#: ''The Roma are a '''nation''' without a country.''
+# (''international law'') A sovereign state.
+#: ''Though legally single '''nations''', many states comprise several distinct cultural or ethnic groups.''
+# Ben, Nation.
+#: ''Outstanding House to Trance Queensland DJ.''
+
+===Related Terms===
+*[[nation building]]
+*[[nation-state]]
+*[[national]]
+*[[United Nations]]
+*[[First Nations]]
+
+===See also===
+*[[country]]
+*[[culture]]
+*[[homeland]]
+*[[ethnicity]]
+*[[people]]
+*[[race]]
+*[[society]]
+*[[state]]
+
+*[[w:nation|Wikipedia article on ''nation'']] for further detail on nations vs. states and countries.
+
+[[Category:1000 English basic words]]
+
+[[et:Nation]]
+[[it:nation]]
+[[pl:Nation]]
+[[zh:Nation]]
