--- a/wiki/star-crossed.wikitext
+++ b/wiki/star-crossed.wikitext
@@ -1,17 +1,18 @@
 {{wikipedia}}
 
 ==English==
-
-===Pronunciation===
-{{substub}}
-
 ===Etymology===
-First attested [[w:1592|1592]], from "''[[w:Romeo and Juliet|Romeo and Juliet]]''" by [[w:William Shakespeare|William Shakespeare]] ([[w:1564|1564]]-[[w:1616|1616]]):
+[[English]]: '''[[star]]''' + [[past participle]] of the verb '''to [[cross]]'''
+
+First attested [[w:1592|1592]], from "[[w:Romeo and Juliet|Romeo and Juliet]]" by [[w:William Shakespeare|William Shakespeare]] ([[w:1564|1564]]-[[w:1616|1616]]):
 :''"From out the fatal loins of those two foes
-:''A pair of [[star-crossed]] lovers take their life."'' &mdash; '''Romeo and Juliet'''
+:''A pair of [[star-crossed]] lovers take their life."'' &mdash; '''Romeo and Juliet''', ''Prologue''
 
 ===Adjective===
 '''star-crossed'''
 #[[ill]]-[[fated]] by [[destiny]], the [[fate]] of the person being "written in the stars".
 #:''The '''star-crossed''' lovers looked into each other's eyes, before dying.''
 ::Note: commonly [[misconstrued]] as ''to be in love''
+
+[[Category:English adjectives]]
+[[Category:Pronunciation stub]]
