--- a/wiki/Kriol.wikitext
+++ b/wiki/Kriol.wikitext
@@ -1,10 +1,6 @@
 {{wikipedia}}
 
 ==English==
-
-===Pronunciation===
-{{substub}}
-
 ===Etymology===
 English; '''[[creole]]'''
 
@@ -14,3 +10,4 @@ English; '''[[creole]]'''
 # a creole widely spoken by [[Australia]]n [[aborigine]]s
 
 [[Category:Languages]]
+[[Category:Pronunciation stub]]
