/* Intransitive verb */ <write#3712>

--- a/wiki/write.wikitext
+++ b/wiki/write.wikitext
@@ -107,7 +107,7 @@ The translations below need to be checked by native speakers and inserted into t
 '''to write''' (''same inflection as transitive verb'')
 
 #To form letters, etc., in order to communicate.
-#:''He's being '''writing''' on the wall.''
+#:''He's been '''writing''' on the wall.''
 #To be an author.
 #:''I '''write''' for a living.''
 
