--- a/wiki/Jesus_jammies.wikitext
+++ b/wiki/Jesus_jammies.wikitext
@@ -8,7 +8,7 @@ English; '''[[Jesus]]''' + '''[[pajamas]]'''
 
 ===Noun===
 ''Jesus jammies''
-# ''(slang, perjorative)'' usually specific to the wrist-length, ankle-length [[gossamer]] [[undergarments]] of the [[Mormon]] [[sect]] of [[Christianity]]
+# ''(slang, perjorative)'' the wrist-length, ankle-length [[gossamer]] [[undergarments]] of the [[Mormon]] [[sect]] of [[Christianity]]
 
 ===Synonyms===
 * [[garment]]
