/* See Also */ <Jesus jammies#97146>

--- a/wiki/Jesus_jammies.wikitext
+++ b/wiki/Jesus_jammies.wikitext
@@ -12,12 +12,13 @@ English; '''[[Jesus]]''' + '''[[pajamas]]'''
 ===Synonyms===
 * [[garment]]
 
-===See Also===
-* [[Church of Jesus Christ of Latter-Day Saints]]
+===See also===
+* [[w:Church of Jesus Christ of Latter-Day Saints|Church of Jesus Christ of Latter-Day Saints]]
 * [[Mormonism]]
 
 [[Category:Clothing]]
 [[Category:Colloquial]]
 [[Category:English nouns]]
 [[Category:English slang]]
+[[Category:Pronunciation stub]]
 [[Category:Religion]]
