--- a/wiki/syllabic_abbreviation.wikitext
+++ b/wiki/syllabic_abbreviation.wikitext
@@ -1,17 +1,23 @@
 {{attention}}
+
 Here is a list of syllabic abbreviations:
 
-*[[Modem]]; from ''modulator'' and ''demodulator''.  This device connects computers to the Internet.
-*[[Codec]]; from ''compressor'' and ''decompressor''.  Computer function that modifies the format of a file.
-*[[Pixel]]; from ''picture'' and ''element''.  This is a unit on a computer display.
-*'''[[bit]]''' from ''[[binary]]'' and ''[[numerical digit|digit]]''
-*'''[[Internet]]''' from ''international/interglobal/interchanged'' and ''network''
-*'''[[multicart]]''' from ''multiple'' and ''cartridge''.  This kind of cartridge consists of multiple games in one (e.g. 76,000-in-1 from [[Power Player Super Joy III]]).
-*'''[[sysop]]''' from ''[[system]]'' and ''[[operator]]''<!--Dubious: combines initial syllables-->
-*'''texel''' from ''[[texture]]'' and ''element''
+* [[Modem]]; from ''modulator'' and ''demodulator''.  This device connects computers to the Internet.
+* [[Codec]]; from ''compressor'' and ''decompressor''.  Computer function that modifies the format of a file.
+* [[Pixel]]; from ''picture'' and ''element''.  This is a unit on a computer display.
+* '''[[bit]]''' from ''[[binary]]'' and ''[[numerical digit|digit]]''
+* '''[[Internet]]''' from ''international/interglobal/interchanged'' and ''network''
+* '''[[multicart]]''' from ''multiple'' and ''cartridge''.  This kind of cartridge consists of multiple games in one (e.g. 76,000-in-1 from [[Power Player Super Joy III]]).
+* '''[[sysop]]''' from ''[[system]]'' and ''[[operator]]''<!--Dubious: combines initial syllables-->
+* '''texel''' from ''[[texture]]'' and ''element''
+* [[Interpol]], from ''international'' and ''police''
+* [[Konami]], names of Kagemasa '''Ko'''zuki, Yoshinobu '''Na'''kama, Hiro '''M'''atsuda, and Shokichi '''I'''shihara
+
 {{listdev}}
 
 ==See Also==
-*[[List of portmanteaus]]
 
+* [[List of portmanteaus]]
+
+[[Category: Abbreviations]]
 [[Category:Lists of abbreviations]]
