wikify <syllabic abbreviation#1420901>

--- a/wiki/syllabic_abbreviation.wikitext
+++ b/wiki/syllabic_abbreviation.wikitext
@@ -1,6 +1,6 @@
 {{attention}}
 
-Here is a list of syllabic abbreviations:
+Here is a list of [[syllabic abbreviations]]:
 
 * [[Modem]]; from ''modulator'' and ''demodulator''.  This device connects computers to the Internet.
 * [[Codec]]; from ''compressor'' and ''decompressor''.  Computer function that modifies the format of a file.
@@ -19,5 +19,5 @@ Here is a list of syllabic abbreviations:
 
 * [[List of portmanteaus]]
 
-[[Category: Abbreviations]]
+[[Category:Abbreviations]]
 [[Category:Lists of abbreviations]]
