--- a/wiki/Jessica.wikitext
+++ b/wiki/Jessica.wikitext
@@ -11,8 +11,8 @@
 *[[Jess]], [[Jessie]]
 
 ====Translations====
-:Dutch; ''Jeske''
-:German; ''Jessika''
+:[[Dutch]]: [[Jeske]]
+:[[German]]: [[Jessika]]
 
 [[Category:Hebrew derivations]]
 [[Category:Pronunciation stub]]
