[[jess]] moved to [[Jess]]: capitalization <jess#172989>

--- a/wiki/Jess.wikitext
+++ b/wiki/Jess.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Noun===
-'''jess''' (''plural'' '''jesses''')
-
-#A short strap fastened around the leg of a bird used in falconry, to which a leash may be fastened.
-
-===Proper noun===
-'''Jess'''
-
-#A short form of the male [[given name]] [[Jesse]].
-#A short form of the female given name [[Jessica]].
+#redirect [[Jess]]
