--- a/wiki/Jess.wikitext
+++ b/wiki/Jess.wikitext
@@ -1,1 +1,9 @@
-#redirect [[Jess]]
+==English==
+===Proper noun===
+'''Jess'''
+
+#A short form of the [[male]] [[given name]] [[Jesse]].
+#A short form of the [[female]] given name [[Jessica]].
+
+[[Category:Pronunciation stub]]
+[[Category:Etymology stub]]
