--- a/wiki/Angola.wikitext
+++ b/wiki/Angola.wikitext
@@ -1,43 +1,1 @@
-==English==
-
-===Proper noun===
-
-# a country in Southern Africa. Official name: Republic of Angola.
-
-====Translations====
-*Bosnian: [[Angola]] ''f''
-*[[Breton]]: [[Angola]]
-*Bulgarian: [[Ангола]]
-*Chinese: [[安哥拉]] (Āngēlā)
-*Danish: [[Angola]]
-*Dutch: [[Angola]]
-*[[Esperanto]]: [[Angolo]]
-*Finnish: [[Angola]]
-*French: [[Angola]] ''m''
-*German: [[Angola]]
-*Greek: [[Ανγκόλα]], [[Αγκόλα]]
-*Hungarian: [[Angola]]
-*[[Interlingua]]: [[Angola]]
-*Italian: [[Angola]] ''f''
-*Japanese: [[アンゴラ]] (Angora)
-*Polish: [[Angola]]
-*Portuguese: [[Angola]]
-*Romanian: [[Angola]] ''f''
-*Russian: [[Ангола]] ''f''
-*Serbian:
-:*cyrillic: [[Ангола]] ''f''
-:*latin: [[Angola]] ''f''
-*Spanish: [[Angola]]
-*Swedish: [[Angola]]
-*Turkish: [[Angola]]
-
-===See also===
-*[[Countries of the world]]
-
-==German==
-===Proper Noun===
-'''Angola''' ''no article''
-# [[Angola]]
-
-*[[en:Angola|Wikipedia article on Angola]]
-[[Category:English country nouns]]
+#redirect [[Angola]]
