--- a/wiki/Jess.wikitext
+++ b/wiki/Jess.wikitext
@@ -1,9 +1,9 @@
-==English==
-===Proper noun===
-'''Jess'''
+===Noun===
+'''jess''' (''plural'' '''jesses''')
 
-#A short form of the [[male]] [[given name]] [[Jesse]].
-#A short form of the [[female]] given name [[Jessica]].
+# a short [[strap]] [[fasten]]ed around the leg of a bird used in [[falconry]], to which a [[leash]] may be fastened
 
-[[Category:Pronunciation stub]]
+[[Category:English nouns]]
 [[Category:Etymology stub]]
+[[Category:Pronuncation stub]]
+[[Category:Sports]]
