--- a/wiki/Jess.wikitext
+++ b/wiki/Jess.wikitext
@@ -5,5 +5,5 @@
 
 [[Category:English nouns]]
 [[Category:Etymology stub]]
-[[Category:Pronuncation stub]]
+[[Category:Pronunciation stub]]
 [[Category:Sports]]
