[[cO]] moved to [[CO]] <CO#5453>

--- a/wiki/CO.wikitext
+++ b/wiki/CO.wikitext
@@ -1,1 +1,16 @@
-#redirect [[co]]
+==English==
+
+==={{Abbreviation}}===
+
+# [[Colorado]], a {{USstate}}
+
+==={{Initialism}}===
+# ''(military)'' [[command]]ing officer; [[commission]]ed officer
+
+==Italian==
+
+===Abbreviation===
+
+# [[Como]] (Italian town in Lombardia)
+
+[[pl:CO]]
