[[bislama]] moved to [[Bislama]]: capitalization <bislama#172992>

--- a/wiki/Bislama.wikitext
+++ b/wiki/Bislama.wikitext
@@ -1,22 +1,1 @@
-{{wikipedia}}
-{{Interwiktionary|code=bi}}
-
-==English==
-
-===Etymology===
-Bislama '''[[#Bislama|Bislama]]''', from [[French]] '''[[bêche de mer]]''', a kind of [[sea cucumber]] (in English also called ''bêche de mer,'' or ''[[trepang]]'').
-
-===Proper noun===
-''Bislama''; formerly ''Beach-la-Mar'', ''Bichelama''
-
-# a [[creole]] spoken on the [[South Pacific]] island-nation of [[Vanuatu]], derived from [[Indo-European]] and [[Malay]] [[language]]s
-
-===See also===
-* [[pidgin]]
-
-[[Category:Languages]]
-[[Category:Pronunciation stub]]
-
-[[it:bislama]]
-[[nl:Bislama]]
-[[fi:Bislama]]
+#redirect [[Bislama]]
