--- a/wiki/Bislama.wikitext
+++ b/wiki/Bislama.wikitext
@@ -1,1 +1,21 @@
-#redirect [[Bislama]]
+{{wikipedia}}
+{{Interwiktionary|code=bi}}
+
+==English==
+===Etymology===
+[[Loanword]] from Bislama, from [[French]] '''[[bêche de mer]]''', a kind of [[sea cucumber]]
+
+===Proper noun===
+''Bislama''; formerly ''Beach-la-Mar'', ''Bichelama''
+
+# a [[creole]] spoken on the [[South Pacific]] island-nation of [[Vanuatu]], derived from [[Indo-European]] and [[Malay]] [[language]]s
+
+===See also===
+* [[pidgin]]
+
+[[Category:Languages]]
+[[Category:Pronunciation stub]]
+
+[[it:bislama]]
+[[nl:Bislama]]
+[[fi:Bislama]]
