--- a/wiki/bobby.wikitext
+++ b/wiki/bobby.wikitext
@@ -1,1 +1,18 @@
-#redirect [[bobby]]
+==English==
+
+
+===Etymology===
+From the [[given name]] of [[w:Robert Peel|Sir Robert Peel]], who [[establish]]ed [[London]]'s [[police]] force.
+
+===Noun===
+'''bobby''' (''plural'' '''bobbies''')
+
+#''(colloquial, slang, British)'' [[pet name]] for a [[police]] [[officer]]
+
+===See also===
+*[[Peeler]]
+
+[[Category:Colloquial]]
+[[Category:English nouns]]
+[[Category:English slang]]
+[[Category:Dated]]
