--- a/wiki/pH.wikitext
+++ b/wiki/pH.wikitext
@@ -1,1 +1,15 @@
-#redirect [[pH]]
+==Translingual==
+====Etymology====
+From ''p'', denoting negative logarithm, and ''H'', denoting hydrogen.
+
+===Abbreviation===
+'''pH''' (''functioning as a noun''; ''plural'' '''pHs''')
+
+#The negative of the [[logarithm]] to the base 10 of the concentration of [[hydrogen]] ions, measured in [[mole]]s per liter; a measure of acidity or alkalinity of a substance, which takes numerical values from 0 (maximum acidity) through 7 (neutral) to 14 (maximum alkalinity).
+
+====See also====
+*[[pOH]], [[pK]]
+
+
+[[fr:pH]]
+[[Category:English:Units of Measure]]
