--- a/wiki/bobby.wikitext
+++ b/wiki/bobby.wikitext
@@ -1,4 +1,5 @@
 ==English==
+<!--Note: etymology explained in definition-->
 ===Proper noun===
 '''Bobby'''
 
@@ -7,3 +8,5 @@
 
 ====Alternative forms====
 *[[Bobbie]]
+
+[[Category:Pronunciation stub]]
