added definition <apeshit#56048>

--- a/wiki/apeshit.wikitext
+++ b/wiki/apeshit.wikitext
@@ -10,6 +10,12 @@
 #: ''I told him the bad news, and he went apeshit.''
 #: ''I told him the bad news, and now he's totally apeshit.''
 
+===Noun===
+'''apeshit'''
+
+# {{slang}} a murdererous rampage
+#: ''Turn on CNN, there's an apeshit in progress.''
+
 ===See also===
 *[[bananas]]
 *[[batshit]]
