--- a/wiki/zeppelin.wikitext
+++ b/wiki/zeppelin.wikitext
@@ -1,1 +1,19 @@
-#redirect [[zeppelin]]
+==English==
+===Etymology===
+Named after Ferdinand, Count von ''Zeppelin''.
+
+===Noun===
+{{wikipedia}}
+'''zeppelin''' also '''[[Zeppelin]]'''
+
+# A type of large [[German]] [[dirigible]] [[airship]] of the early 20th century; designed to carry [[passenger]]s or [[bomb]]s
+
+===See also===
+*[[airship]]
+*[[balloon]]
+*[[barrage balloon]]
+*[[blimp]]
+*[[dirigible]]
+*[[w:Zeppelin|Wikipedia article on zeppelins]]
+
+[[Category:English eponyms]]
