--- a/wiki/fashion.wikitext
+++ b/wiki/fashion.wikitext
@@ -2,7 +2,7 @@
 
 ===Noun===
 '''fashion''' ([[fashions]], [[fashionable]], [[fashionably]])
-#A current (constantly changing) [[trend]], favored for frivolous rather than practical, logical, or intellectual reasons.
+#A current (constantly changing) [[trend]], favored for [[frivolous]] rather than practical, logical, or intellectual reasons.
 
 ===Translations===
 *Chinese: [[时尚]] (shí shàng)
