--- a/wiki/zeppelin.wikitext
+++ b/wiki/zeppelin.wikitext
@@ -4,7 +4,7 @@ Named after Ferdinand, Count von ''Zeppelin''.
 
 ===Noun===
 {{wikipedia}}
-'''zeppelin''' also '''[[Zeppelin]]'''
+'''[[zeppelin]]''' also '''Zeppelin'''
 
 # A type of large [[German]] [[dirigible]] [[airship]] of the early 20th century; designed to carry [[passenger]]s or [[bomb]]s
 
