--- a/wiki/dead_horse.wikitext
+++ b/wiki/dead_horse.wikitext
@@ -1,1 +1,10 @@
-#REDIRECT:[[beat a dead horse]]
+==English==
+
+===Noun phrase===
+'''dead horse'''
+
+#A [[horse]] that has stopped [[live|living]] and thus is [[dead]].
+
+<center>[[Image:Horsie.jpg]]</center>
+
+[[Category:Dead animals]]
