[[oedipal]] moved to [[Oedipal]]: capitalization <oedipal#173028>

--- a/wiki/Oedipal.wikitext
+++ b/wiki/Oedipal.wikitext
@@ -1,8 +1,1 @@
-==English==
-
-===Pronunciation===
-*[[w:International Phonetic Alphabet|IPA]]:/idəpɛl/, /idəpəl/
-
-===Adjective===
-'''Oedipal''' or '''oedipal'''
-# Of or relating to the [[Oedipus complex]].
+#redirect [[Oedipal]]
