--- a/wiki/PG.wikitext
+++ b/wiki/PG.wikitext
@@ -1,1 +1,5 @@
-#redirect [[pg]]
+==English==
+
+===Abbreviation===
+'''PG'''
+# (''U.S., sometimes International as symbolic''): Parental Guidance - ''mild humor, violence, and mild content''
