[[mA]] moved to [[MA]]: capitalization <mA#173032>

--- a/wiki/MA.wikitext
+++ b/wiki/MA.wikitext
@@ -1,13 +1,1 @@
-==English==
-
-==={{Abbreviation}}===
-#[[Megaampere]]   (1.000.000 ampere)
-#[[Massachusetts]], a {{USstate}}
-#[[Master of Arts]] (Degree)
-----
-
-==Portuguese==
-===Abbreviation===
-#[[Maranhão]] (Brazilian state)
-
-[[pl:MA]]
+#redirect [[MA]]
