--- a/wiki/dichotomic.wikitext
+++ b/wiki/dichotomic.wikitext
@@ -1,15 +1,14 @@
 ==English==
 
-===Adjective===
+===Etymology===
+This term is an adjective derived from the noun [[dichotomy]].
 
+===Adjective===
+'''dichotomic'''
 #''(computing)''Choosing between two anti-antithetical choices. Classification based upon two opposites.[http://www.iop.org/EJ/abstract/0305-4470/27/14/016]
 #''(botany)'': That system of classification which pertains to two opposite criteria.[http://www.biologie.uni-hamburg.de/b-online/e02/02.htm]
 <p>
 The [http://www.nist.gov/dads/ NIST Dictionary of Algorithms and Data Structures] defines dichotomous search as: "Search by selecting between two distinct alternatives (dichotomies) at each step."
-
-===Etymology===
-
-This term is an adjective derived from the noun [[Dichotomy]].
 
 ===Quotations===
 
@@ -39,3 +38,5 @@ Di*chot"o*mic (dI-'kät-&-mik)
 * http://www.artnet.de/artwork/424063981/Estate_of_Lorser_Feitelson_Dichotomic_Organization_Stripes.html
 
 [[pl:Dichotomic]]
+
+[[Category:English adjectives]]
