--- a/wiki/evanesce.wikitext
+++ b/wiki/evanesce.wikitext
@@ -5,6 +5,7 @@
 === Intransitive verb ===
 '''evanesce''' ''(evanesced, evanescing, evanesces)''
 # to disappear into a [[mist]] or [[dissipate]] in vapor
+# in [[chemistry]], to [[transition]] from the [[solid]] state to [[gaseous]] state without ever becoming a [[liquid]]
 === See also ===
 *[[evanescent]]
 *[[evanescently]]
