--- a/wiki/steam_radio.wikitext
+++ b/wiki/steam_radio.wikitext
@@ -1,5 +1,4 @@
-Steam radio is a phrase of British slang for both the apparatus and the content of the communications medium of [[broadcasting|broadcast]] radio prior to the portable [[transistor radio]] and its catering to the youth market starting in the late 1950s. 
-
-1.) Prior to the transistor age, a [[receiver]] apparatus was large and filled with [[thermionic valve]]s ([[electronic tube]]s) that would fail and could be replaced; these parts were incomprehensible to most people and their supersession reminded them of the passing of steam locomotives. 
-
-2.) Radio drama and comedy for the whole family are genres that have disappeared, as well as the [[popular music]] before [[rock and roll]]; these are included in another use of the term, along with changes in the style of [[newsreader]]s (radio announcers).
+==English==
+===Noun===
+'''[[steam]] [[radio]]'''
+#(''mostly British, informal'') radio, as opposed to [[television]]; a radio [[set]], especially an [[old fashioned]] one; a radio [[broadcast]]
