add ==English==, wikify <boutique#173014>

--- a/wiki/boutique.wikitext
+++ b/wiki/boutique.wikitext
@@ -1,1 +1,5 @@
-#redirect [[boutique]]
+==English==
+===Noun===
+'''boutique'''
+# a small [[shop]], especially one that sells [[fashionable]] [[clothes]], [[jewelry]] and the like
+# a small shop located within a larger one
