--- a/wiki/bacteria.wikitext
+++ b/wiki/bacteria.wikitext
@@ -1,1 +1,40 @@
-#redirect [[bacteria]]
+==English==
+[[Image:Bacteria.gif|thumb|A Bacterium]]
+===Pronunciation===
+:[[International Phonetic Alphabet|IPA]]: /bækˈtɪɻ.i.ə/ (US)
+===Etymology===
+Greek ''bacterios'' small stick
+===Noun=== 
+'''bacteria'''
+
+#Plural of [[bacterium]].
+#A derisive term for a lowlife or a slob (could be treated as plural or singular).
+
+====Usage note====
+*This is the plural form of the word.  While it is often used as if it were singular (as a collective noun), this is nonstandard.  See the usage examples under ''[[bacterium]]''.
+
+<!--is there any point in having translations on this page?-->
+
+==== Translations ====
+''see also under'' '''[[bacterium]]'''
+*Arabic: [[&#1580;&#1585;&#1575;&#1579;&#1610;&#1605;]]
+*[[Breton]]: [[bakteri]] ''collective noun'' [[bakterienn]] ''singular f''
+*Chinese: [[細菌]], [[细菌]]
+*Dutch: [[bacteriën]]
+*[[Ekspreso]]: [[bakterios]]
+*Finnish: [[bakteerikanta]] (''collective noun''), [[bakteerit]] (''plural'')
+*French: [[bactéries]] ''f plural''
+*German: [[Bakterien]] 
+*Indonesian: [[bakteri]] 
+*[[Interlingua]]: [[bacterios]] 
+*Italian: [[batteri]] ''m plural''
+*Japanese: [[細菌]] ([[さいきん]], saikin) 
+*Polish: [[bakterie]]
+*Portuguese: [[bactérias]] 
+*Slovak: [[baktérie]] ''f pl''
+*Spanish: [[bacterias]]
+*Swedish: [[bakterier]]
+*[[Volapük]]: [[bakters]]
+[[Category:Greek derivations]]
+===See also===
+*[[Bacteria]]
