/* Proper noun */ <Bacteria#113734>

--- a/wiki/bacteria.wikitext
+++ b/wiki/bacteria.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 {{wikipedia}}
 '''Bacteria'''
-#a [[taxonomic]] [[kingdom]], within [[domain]] [[Prokaryota]] - the [[single]] [[cell]] [[organism]]s
+#a [[taxonomic]] [[kingdom]], within [[domain]] [[Prokaryota]] - [[single]] [[cell]] [[organism]]s (the [[bacteria]])
 [[Category:Taxonomy]]
 
 ===Related terms===
