--- a/wiki/Archebacteria.wikitext
+++ b/wiki/Archebacteria.wikitext
@@ -1,10 +1,1 @@
-==English==
-===Etymology===
-Greek ?
-===Proper noun===
-{{wikipedia}}
-'''Archebacteria'''
-#a [[taxonomic]] [[subkingdom]], within [[kingdom]] [[Bacteria]] - the [[Archaea]]
-{{wikispecies}}
-*Note: this is an [[alternative]] [[taxonomy]] for these [[organism]]s
-[[Category:Taxonomy]]
+#redirect [[Archebacteria]]
