[[archaea]] moved to [[Archaea]]: uppercase <archaea#173062>

--- a/wiki/Archaea.wikitext
+++ b/wiki/Archaea.wikitext
@@ -1,14 +1,1 @@
-==English==
-===Etymology===
-Greek ?
-===Proper noun===
-{{wikipedia}}
-'''Archaea'''
-#a [[taxonomic]] [[kingdom]], within [[domain]] [[Prokaryota]] - [[ancient]] [[bacteria]]-[[like]] [[organism]]s
-===Related terms===
-{{wikispecies}}
-*[[phyla]]
-**[[Crenarchaeota]]
-**[[Euryarchaeota]]
-**[[Korarchaeota]]
-**[[Nanoarchaeota]]
+#redirect [[Archaea]]
