[[eubacteria]] moved to [[Eubacteria]]: uppercase <eubacteria#173066>

--- a/wiki/Eubacteria.wikitext
+++ b/wiki/Eubacteria.wikitext
@@ -1,32 +1,1 @@
-==English==
-===Etymology===
-Greek ?
-===Proper noun===
-{{wikipedia}}
-'''Eubacteria'''
-#a [[taxonomic]] [[subkingdom]], within [[kingdom]] [[Bacteria]] - most [[bacteria]]
-===Related terms===
-{{wikispecies}}
-*[[phyla]]
-**[[Actinobacteria]]
-**[[Aquificae]]
-**[[Bacteroidetes]]/[[Chlorobi]]
-**[[Chlamydiae]]/[[Verrucomicrobia]]
-**[[Chloroflexi]]
-**[[Chrysiogenetes]]
-**[[Cyanobacteria]]
-**[[Deferribacteres]]
-**[[Deinococcus-Thermus]]
-**[[Dictyoglomi]]
-**[[Fibrobacteres]]/[[Acidobacteria]]
-**[[Firmicutes]]
-**[[Fusobacteria]]
-**[[Gemmatimonadetes]]
-**[[Nitrospirae]]
-**[[Omnibacteria]]
-**[[Planctomycetes]]
-**[[Proteobacteria]]
-**[[Spirochaetes]]
-**[[Thermodesulfobacteria]]
-**[[Thermomicrobia]]
-**[[Thermotogae]]
+#redirect [[Eubacteria]]
