[[cyanobacteria]] moved to [[Cyanobacteria]]: uppercase <cyanobacteria#173067>

--- a/wiki/Cyanobacteria.wikitext
+++ b/wiki/Cyanobacteria.wikitext
@@ -1,12 +1,1 @@
-==English==
-===Etymology===
-Latin ''cyano'' a blu gemstone + bacteria
-===Proper noun===
-{{wikipedia}}
-'''Cyanobacteria'''
-#a [[taxonomic]] [[phylum]], within [[subkingdom]] [[Eubacteria]] - the [[blue-green algae]]
-===Synonyms===
-*[[cyanophyta]]
-===Related terms===
-{{wikispecies}}
-*to follow
+#redirect [[Cyanobacteria]]
