[[animalia]] moved to [[Animalia]]: uppercase <animalia#173071>

--- a/wiki/Animalia.wikitext
+++ b/wiki/Animalia.wikitext
@@ -1,17 +1,1 @@
-==English==
-===Etymology===
-Latin ''animalis'' animal, living creature
-===Proper noun===
-{{wikipedia}}
-'''Animalia'''
-#a [[taxonomic]] [[kingdom]] in [[domain]] [[Eukaryota]] - all [[multicellular]] [[organism]]s that have a [[central nervous system]] and need to [[consume]] other organisms for [[energy]]
-===Related terms===
-{{wikispecies}}
-*[[kingdom]]s
-**[[Plantae]]
-**[[Fungi]]
-**[[Protista]]
-*[[subkingdom]]s
-**[[Parazoa]]
-**[[Agnotozoa]]
-**[[Eumetazoa]]
+#redirect [[Animalia]]
