[[arthropoda]] moved to [[Arthropoda]]: uppercase <arthropoda#173106>

--- a/wiki/Arthropoda.wikitext
+++ b/wiki/Arthropoda.wikitext
@@ -1,15 +1,1 @@
-==English==
-===Etymology===
-Greek ''arthron'' joint, New latin ''poda'' foot
-===Proper noun===
-{{wikipedia}}
-'''Arthropoda'''
-#a [[taxonomic]] [[phylum]], within [[superphylum]] [[Protostomia]] - the [[arthropod]]s
-===Related terms===
-{{wikispecies}}
-*[[subphyla]]
-**[[Chelicerata]] ([[spider]]s etc)
-**[[Crustacea]] ([[crab]]s etc)
-**[[Hexapoda]] ([[insect]]s etc)
-**[[Myriapoda]] ([[centipede]]s etc)
-**[[Trilobitomorpha]] ([[trilobite]]s extinct)
+#redirect [[Arthropoda]]
