fmt, wikipedia <Kavaratti#6495>

--- a/wiki/Kavaratti.wikitext
+++ b/wiki/Kavaratti.wikitext
@@ -1,4 +1,7 @@
+==English==
 ===Proper noun===
+'''Kavaratti'''
+{{wikipedia}}
 #Capital of the union territory of [[Lakshadweep]] ([[India]]).
 
 [[nl:Kavaratti]]
