[[hexapoda]] moved to [[Hexapoda]]: uppercase <hexapoda#173115>

--- a/wiki/Hexapoda.wikitext
+++ b/wiki/Hexapoda.wikitext
@@ -1,14 +1,1 @@
-==English==
-===Etymology===
-Greek ''hexa'' six, New Latin ''poda'' foot
-===Proper noun===
-{{wikipedia}}
-'''Hexapoda'''
-#a [[taxonomic]] [[subphylum]], within [[phylum]] [[Arthropoda]] - the [[insect]]s etc
-===Related terms===
-{{wikispecies}}
-*[[classes]]
-**[[Collembola]]
-**[[Diplura]]
-**[[Insecta]]
-**[[Protura]]
+#redirect [[Hexapoda]]
