fmt, wikipedia <Uttar Pradesh#6044>

--- a/wiki/Uttar_Pradesh.wikitext
+++ b/wiki/Uttar_Pradesh.wikitext
@@ -1,4 +1,7 @@
+==English==
 ===Proper noun===
+'''Uttar Pradesh'''
+{{wikipedia}}
 #State in northern [[India]] which has [[Lucknow]] as its capital.
 
 [[hi:Uttar Pradesh]]
