fmt, wikipedia <Srinagar#6490>

--- a/wiki/Srinagar.wikitext
+++ b/wiki/Srinagar.wikitext
@@ -1,4 +1,8 @@
+==English==
+
 ===Proper noun===
+'''Srinagar'''
+{{wikipedia}}
 #State capital of [[Jammu and Kashmir]] ([[India]]).
 
 [[nl:Srinagar]]
