--- a/wiki/Jammu_and_Kashmir.wikitext
+++ b/wiki/Jammu_and_Kashmir.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Proper noun===
 '''[[Jammu]] and [[Kashmir]]'''
-
+{{wikipedia}}
 #State in northern [[India]] which has [[Srinagar]] as its capital.
 
 [[hi:Jammu and Kashmir]]
