[[bryozoa]] moved to [[Bryozoa]]: uppercase <bryozoa#173130>

--- a/wiki/Bryozoa.wikitext
+++ b/wiki/Bryozoa.wikitext
@@ -1,24 +1,1 @@
-==English==
-===Etymology===
-From Greek [[βρύον]] (bryon) + [[ζώα]] (zoa)
-
-===Pronunciation===
-* [[Wiktionary:Pronunciation_key|IPA]]: /ˌbɹɑɪ.əˈzəʊ.ə/
-
-===Proper Noun===
-{{wikipedia}}
-'''Bryozoa'''
-#a [[taxonomic]] [[phylum]], within [[superphylum]] [[Protostomia]] - the [[polyzoa]]
-
-===Noun===
-'''bryozoa'''
-# Plural of [[bryozoon]]
-
-===Related Terms===
-{{wikispecies}}
-*[[classes]]
-**[[Stenolaemata]]
-**[[Gymnolaemata]]
-**[[Phylactolaemata]]
-*[[bryozoan]]
-*[[bryozoon]]
+#redirect [[Bryozoa]]
