fmt, wikipedia <Naples#28252>

--- a/wiki/Naples.wikitext
+++ b/wiki/Naples.wikitext
@@ -1,8 +1,9 @@
 ==English==
-'''Naples'''
+
 
 ===Proper noun===
-
+'''Naples'''
+{{wikipedia}}
 #Province of [[Campania]], [[Italy]].
 #City and capital of the province of Naples, with a metropolitan population of more than 2,300,000.
 
