[[echinodermata]] moved to [[Echinodermata]]: uppercase <echinodermata#173134>

--- a/wiki/Echinodermata.wikitext
+++ b/wiki/Echinodermata.wikitext
@@ -1,16 +1,1 @@
-==English==
-===Etymology===
-Latin ''echino'' sea-urchin
-===Proper noun===
-{{wikipedia}}
-'''Echinodermata'''
-#a [[taxonomic]] [[phylum]], within [[superphylum]] [[Deuterostomia]] - various [[sea]] [[creature]]s
-===Related terms===
-{{wikispecies}}
-*[[class]]es
-**[[Asteroidea]] ([[starfish]])
-**[[Concentricycloidea]] ([[sea daisies]])
-**[[Crinoidea]] ([[feather star]]s etc)
-**[[Echinoidea]] ([[sea urchin]]s)
-**[[Holothuroidea]] ([[sea cucumber]]s)
-**[[Ophiuroidea]] ([[brittle star]]s)}}
+#redirect [[Echinodermata]]
