[[vertebrata]] moved to [[Vertebrata]]: uppercase <vertebrata#173139>

--- a/wiki/Vertebrata.wikitext
+++ b/wiki/Vertebrata.wikitext
@@ -1,21 +1,1 @@
-==English==
-===Etymology===
-Latin ''vertere'' to turn
-===Proper noun===
-{{wikipedia}}
-'''Vertebrata'''
-#a [[taxonomic]] [[subphylum]], within [[phylum]] [[Chordata]] - [[animal]]s with a [[backbone]]
-===Related terms===
-*[[class]]es
-**[[Petromyzontida]]/[[Cephalospidomorphi]] ([[lamprey]]s)
-**[[Placodermi]] (extinct, fish-like)
-**[[Chondrichthyes]] ([[shark]]s and [[ray]]s
-**[[Acanthodii]] (extinct, fish-like)
-**[[Actinopterygii]] ([[fishes]])
-**[[Actinistia]]/[[Sarcopterygii]] ([[coelacanth]] etc)
-**[[Dipnoi]] ([[lungfish]]es)
-**[[Amphibia]] ([[amphibian]]s)
-**[[Reptilia]] ([[reptile]]s)
-**[[Aves]] ([[bird]]s)
-**[[Mammalia]] ([[mammal]]s)
-{{wikispecies}}
+#redirect [[Vertebrata]]
