fmt, wikipedia <Londoner#50141>

--- a/wiki/Londoner.wikitext
+++ b/wiki/Londoner.wikitext
@@ -1,4 +1,7 @@
-==Proper noun===
+==English==
+===Proper noun===
+'''Londoner'''
+{{wikipedia}}
 #A person from, or an inhabitant of, [[London]].
 
 [[it:londoner]]
