--- a/wiki/house.wikitext
+++ b/wiki/house.wikitext
@@ -1,1 +1,212 @@
-#redirect [[house]]
+==English==
+
+===Etymology===
+From Middle English '''h(o)us''' < Old English '''[[hus|hūs]]''' (dwelling, shelter, house) < Proto-Germanic '''[[*khusan]]''', of unknown origin.
+
+===Noun===
+'''house''' (plural: [[house]]s)
+
+====Pronunciation====
+*hous, /haʊs/, /haUs/
+
+#An abode of a human being, a place that a human built to live in.
+#The archetypal structure of a human abode.
+#a style or genre of [[music]].
+#a complete set of numbers in bingo (in the UK).
+#the usual place to find an animal or an object (the latter informally) (''the photo was put in its little house'').
+#an auditorium for a theatre, or the theatre itself.
+#a debating chamber for government politicians.
+#an establishment—whether actual (as a pub) or virtual (as a website).
+#the workings of a clock or similar.
+#A dynasty, a familiar descendance, for example, a Royal House.
+#''(astrology):'' One of the twelve divisions of an astrological chart.
+#an early or alternative name for the game [[bingo]]
+[[Category:Astrology]] [[Category:History]]
+====Related terms====
+*[[house music]]
+*[[house wine]]
+*[[full house]]
+*[[Royal house]]
+*[[housy-housy]]
+*[[acid house]]
+*[[house warming]]
+
+====Translations====
+
+'''abode''' (''noun'')
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Afrikaans: [[huis]]
+*Arabic: [[بيت|بَيْتٌ]] (beyt) ''m'', [[بيوت|بُيُوتٌ]] (buyút) ''pl''
+*[[Basque]]: [[etxe]]
+*[[Blackfoot]]: [[naapiooyis]]
+*[[Breton]]: [[ti]] ''m''
+*Bulgarian: [[къща]] (kəšta) ''f''
+*[[Catalan]]: [[casa]] ''f''
+*Chinese: [[房屋]] (fángwū)
+*[[Chuvash]]: {{Unicode|[[ҫурт]] / [[ҫурт|çурт]] (çurt) ''sg'', [[ҫурт|ҫуртсем]] / [[ҫурт|çуртсем]] (çurtsem) ''pl''}}
+*[[Cree]]: [[wikowin]]
+*Croatian: [[kuća]] ''f''
+*Czech: [[dům]] ''m''
+*Danish: [[hus]] ''n''
+*Dutch: [[huis]] ''n''
+*[[Esperanto]]: [[domo]]
+*Estonian: [[maja]]
+*[[Faroese]]: [[hús]]
+*[[Fijian]]: [[vale]]
+*Finnish: [[talo]]
+*French: [[maison]] ''f''
+*[[Frisian]]: [[hûs]] ''n''
+*[[Galician]]: [[casa]] ''f''
+*German: [[Haus]] ''n'', [[Häuser]] ''pl''
+*Greek (Ancient): [[οἶκος]] (oíkos) ''m'', [[οἰκία]] (oikía) ''f''
+*Greek (Modern): [[σπίτι]] (spíti) ''n''
+*Hawaiian: [[hale]]
+*Hebrew: [[בית]] (báyit) ''m'', [[בתים]] (batím) ''pl''
+*Hungarian: [[ház]]
+*[[Ido]]: [[domo]]
+*Indonesian: [[rumah]]
+*Irish: [[teach]]
+*Italian: [[casa#Italian|casa]] ''f'', [[casa#Italian|case]] ''pl''
+*Japanese: [[家]] ([[いえ]], ié), [[建物]] ([[たてもの]], tatémono)
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Kashubian: [[dóm]]
+*Korean: [[집]] (jip)
+*[[Kurdish]]: [[xanî]]
+*[[Lakota]]: [[tipi]]
+*Latin: [[domus]] ''f'', [[domus]] ''pl''
+*[[Low Saxon]]: [[Huus]] ''n''
+*[[Luganda]]: [[nyumba]]
+*[[Luiseño]]: [[kíiča]]
+*Malay: [[rumah]]
+*Maltese: [[bejt]]
+*Norwegian: [[hus]] ''n''
+*[[Ojibwe]]: [[waakaa'igan]], [[waakaa'iganan]] ''pl''
+*Persian: [[خانه|خانِه]] (xāne)
+*Polish: [[dom]] ''m''
+*Portuguese: [[casa]] ''f''
+*[[Quechua]]: [[wasi]] ''sg'', [[wasikuna]] ''pl''
+*Romanian: [[casă]] ''f''
+*Russian: [[дом]] (dom) ''m'', [[дом|дома]] (domá) ''pl''
+*Serbian: [[кућа]] (kuča) ''f''
+*Slovak: [[dom]] ''m''
+*Slovene: [[hiša]] ''f''
+*Spanish: [[casa]] ''f''
+*Swahili: [[nyumba]] ''sg/pl (noun 9/10)''
+*Swedish: [[hus]] ''n'', [[byggnad]] ''c''
+*[[Tagalog]]: [[bahay]]
+*Thai: [[บ้าน]] (bààn)
+*Turkish: [[ev]] ''sg'', [[evler]] ''pl''
+*Tuvaluan: [[fale]]
+*Ukrainian: [[дім]] (dim) ''m''
+*[[Urdu]]: [[ghar]]
+*Welsh: [[annedd]] ''m/f''
+*Yiddish: [[hoyz]]
+*[[Yup'ik]]: [[ne]], [[ena]] ''([[absolutive case|absolutive]])''
+|}
+|}
+
+====Translations====
+
+'''archetypal structure of a human abode''' (''noun'')
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Finnish: [[talo]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Swedish: [[hus]] ''n'', [[byggnad]] ''c''
+|}
+|}
+
+====Translations====
+
+'''a genre of music''' (''noun'')
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Finnish: house
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Swedish: [[house#Swedish|house]] ''c''
+|}
+|}
+
+====Translations====
+
+'''an establishment''' (''noun'')
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Swedish: [[hus]] ''n''
+|}
+|}
+
+===Verb===
+'''to house''' ([[houses]], [[housed]], [[housing]])
+
+====Pronunciation====
+*houz, /haʊz/, /haUz/
+*:'''Homophones''': [[hows]]
+
+#to [[keep]] within a structure or container. (''the car is housed in the garage'')
+#to admit to residence; to [[harbor]]
+#{{cattag|astronomy}}: To dwell within one of the twelve astrological [[houses]].
+#to contain or cover mechanical parts
+
+====Translations====
+*French: [[garer]], [[loger]] (1); [[héberger]], [[abriter]], [[loger]] (2)
+*German: [[unterbringen]], [[beherbergen]]
+*Portuguese: [[armazenar]] (1); [[alojar]], [[hospedar]] (2)
+*Russian: [[поселять]] / [[поселить]] (poselját'/poselít'), [[помещать]] / [[поместить]] (pomeščát'/pomestít'), [[приютить]] (prijutít') (2)
+*Spanish: [[almacenar]] (1); [[alojar]], [[hospedar]], [[albergar]] (2); [[encajar]], [[envolver]] (4)
+
+===External links===
+{{Wikipedia}}
+*[[w:House (astrology)|Wikipedia article on astrological houses]]
+*[http://free-horoscopes.typepad.com Guide to free horoscopes] with selected sites, lessons for beginners and horoscope freeware.
+----
+
+==Czech==
+===Noun===
+'''house''' (genitive: housete), neuter
+
+====Pronunciation====
+SAMPA: /h\o_use/
+
+# a baby goose, a [[gosling]]
+
+==Swedish==
+===Noun===
+'''house''' ''c''
+
+#house, a style or genre of [[music]]
+
+====Synonyme====
+*[[housemusik]], [[house-musik]]
+
+[[Category:200 English basic words]]
+
+[[it:house]]
+[[hu:house]]
+[[ro:House]]
+[[ru:House]]
+[[fi:House]]
+[[sv:house]]
