--- a/wiki/Ireland.wikitext
+++ b/wiki/Ireland.wikitext
@@ -26,7 +26,7 @@
 *'''Hungarian''': [[Írország]]
 *'''Indonesian''': [[Irlandia]]
 *'''Interlingua''': [[Irlanda]]
-*'''Irish''': [[Éire]] ''f''
+*'''Irish''': [[Éire, banba]] ''f''
 *'''Italian''': [[Irlanda]]
 *'''Japanese''': [[アイルランド]] (airurando)
 *'''Latin''': [[Hibernia]]
