--- a/wiki/Ireland.wikitext
+++ b/wiki/Ireland.wikitext
@@ -26,7 +26,7 @@
 *'''Hungarian''': [[Írország]]
 *'''Indonesian''': [[Irlandia]]
 *'''Interlingua''': [[Irlanda]]
-*'''Irish''': [[Éire]] ''f'' [banba]]
+*'''Irish''': [[Éire]] ''f'' :[banba]]
 *'''Italian''': [[Irlanda]]
 *'''Japanese''': [[アイルランド]] (airurando)
 *'''Latin''': [[Hibernia]]
