[[scot]] moved to [[Scot]]: uppercase <scot#173176>

--- a/wiki/Scot.wikitext
+++ b/wiki/Scot.wikitext
@@ -1,23 +1,1 @@
-==English==
-===Etymology 1===
-{{etystub}}
-===Proper noun===
-[[Category:English proper nouns]]
-'''Scot''' (''plural'' '''Scots''')
-#A person born in or native to [[Scotland]].
-====Translations====
-*Dutch: [[Schot]] ''m'', Schotse ''f''.
-*French: [[Écossais]] ''m'', Écossaise ''f''
-*Italian: [[scozzese]] ''m and f''
-*[[Polish]]: Szkot ''m'', Szkotka ''f''
-===Etymology 2===
-From {{OF.}} [[esco]] and {{OE.}} [[sceot]] ''payment''
-===Noun===
-[[Category:English nouns]]
-'''scot'''
-#(''British history'') a [[payment]] (of a [[customary]] [[tax]]) (also '''scot and lot''')
-====Derived terms====
-*[[scot-free]]
-====Related words====
-*[[shot]], [[shout]]
-*[[escot]]
+#redirect [[Scot]]
