--- a/wiki/Beirut.wikitext
+++ b/wiki/Beirut.wikitext
@@ -1,5 +1,7 @@
-== English==
+==English==
 ===Proper noun===
+'''Beirut'''
+{{wikipedia}}
 [[Category:English proper nouns]]
 # [[capital]] city of [[Lebanon]]
 
