Add anatomy category and plural <carpal#66654>

--- a/wiki/carpal.wikitext
+++ b/wiki/carpal.wikitext
@@ -1,7 +1,9 @@
 {{wikipedia}}
 ==English==
 ===Noun===
-'''Carpal'''
-# (anatomy) any of the eight bones of the wrist
+'''Carpal''' (''plural'' '''carpals''')
+# (anatomy) any of the eight bones of the [[wrist]].
+
+[[Category:Anatomy]]
 
 [[pl:Carpal]]
