Add carpus <wrist#54034>

--- a/wiki/wrist.wikitext
+++ b/wiki/wrist.wikitext
@@ -4,9 +4,9 @@
 *:[[Rhymes:English:-ɪst|Rhymes: -ɪst]]
 
 ===Noun===
-'''wrist''' ([[wrists]])
+'''wrist''' (''plural'' '''wrists''')
 
-# The complex [[joint]] where the [[hand]] is attached to the [[arm]]
+# The complex [[joint]] where the [[hand]] is attached to the [[arm]], the [[carpus]].
 
 ====Derived terms====
 *[[wristwatch]], [[wrist watch]]
