--- a/wiki/criminologist.wikitext
+++ b/wiki/criminologist.wikitext
@@ -16,5 +16,6 @@ KRI-min-OH-loh-jist
 
 *French: [[criminologiste]]
 *German: [[Kriminologe]] ''m'', [[Kriminologin]] ''f''
+*Greek: [[εγκληματολόγος]]
 *Italian: [[criminogista]] ''f'', [[criminogisto]] ''m''
 *Latin: [[ragiologista]] ''f'', [[radiologistus]] ''m''
