expand, fmt <conduce#173222>

--- a/wiki/conduce.wikitext
+++ b/wiki/conduce.wikitext
@@ -1,3 +1,7 @@
-'''Verb'''
+==English==
+===Verb===
+'''conduce'''
+#To [[contribute]] or lead to a specific result.
 
-1. To contribute or lead to a specific result.
+===See also===
+*[[conducive]]
