fmt, cleanup <scrummy#173249>

--- a/wiki/scrummy.wikitext
+++ b/wiki/scrummy.wikitext
@@ -1,8 +1,15 @@
 ==English==
 
-===Adjective===
-Childish term for delicious (see [[Scrumptious]] and [[Yummy]]).
+===Etymology 1===
+From [[scrumptious]] and [[yummy]].
 
+===Adjective===
+'''scrummy'''
+#Childish term for [[delicious]] 
+
+===Etymology 2===
+From "School-Run Mummy"
 
 ===Noun===
-(From School-Run Mummy).  Perjorative term for woman who causes congestion by driving her offspring to and from school.  UK, particularly London.
+'''scrummy'''
+#  Perjorative term for woman who causes congestion by driving her offspring to and from school.  UK, particularly London.
