--- a/wiki/Dominica.wikitext
+++ b/wiki/Dominica.wikitext
@@ -1,36 +1,1 @@
-==English==
-===Proper noun===
-
-# Country in the Caribbean. Official name: Commonwealth of Dominica.
-
-===Translations===
-*Bosnian: Dominika ''f''
-*Breton: Dominica
-*Chinese: [[多米尼加]]
-*Danish: Dominica
-*Dutch: Dominica
-*Esperanto: [[Dominiko]]
-*Finnish: Dominica
-*French: [[Dominique]]
-*German: Dominica
-*Greek: [[Ντομίνικα]], [[Δομίνικα]]
-*Hungarian: [[Doninikai Közösség]], [[Dominika]]
-*Interlingua: Dominica
-*Italian: Dominica
-*Japanese: [[ドミニカ]] (dominika)
-*Polish: [[Dominika]]
-*Portuguese: [[Domínica]]
-*Romanian: Dominica ''f''
-*Russian: [[Доминика]]
-*Spanish: Dominica
-*Swedish: Dominica
-*Turkish: [[Dominika]]
-
-===See also===
-*[[Wiktionary Appendix:Countries of the world]]
-*[[w:Dominica]]
-
-[[Category:Countries]]
-
-[[nl:dominica]]
-[[pl:Dominica]]
+#redirect [[Dominica]]
