[[france]] moved to [[France]]: uppercase <france#173264>

--- a/wiki/France.wikitext
+++ b/wiki/France.wikitext
@@ -1,93 +1,1 @@
-==English==
-{{Wikipedia}}
-===Proper noun===
-'''France'''
-
-# Country in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République Française]]). Population: 62 million inhabitants.
-
-====Translations====
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''Arabic''': [[فَرَنْسَا]]
-*'''Bosnian''': [[Francuska]] ''f''
-*'''Breton''': [[Frañs]] (State), [[Bro-C'hall]] (country)
-*'''Brithenig''': [[Ffreinc']]
-*'''Catalan''': [[França]] ''f''
-*'''Cornish''': [[Pow Frynk]]
-*'''Chinese''': [[法兰西]] (Fǎlánxī), [[法国]] (Fǎguó)
-*'''Czech''': [[Francie]]
-*'''Danish''': [[Frankrig]]
-*'''Dutch''': [[Frankrijk]] ''n''
-*'''Esperanto''': [[Francio]], [[Francujo]]
-*'''Estonian''': [[Prantsusmaa]]
-*'''Finnish''': [[Ranska]]
-*'''French''': France ''f''
-*'''German''': [[Frankreich]] ''no gender''
-*'''Greek''': [[Γαλλία]] ''f''
-*'''Hebrew''': [[צרפת|צָרְפַת]] (Tzarfat; classical Ṣārəphath)
-*'''Hungarian''': [[Franciaország]]
-*'''Indonesian''': [[Perancis]]
-*'''Interlingua''': [[Francia]]
-*'''Irish''': [[an Fhrainc]] ''f''
-*'''Italian''': [[Francia]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''Japanese''': [[フランス]], [[仏蘭西]] (furansu)
-*'''Korean''': [[프랑스]] (peurangseu)
-*'''Latin''': [[Gallia]]
-*'''Latvian''': [[Francija]] ''f''
-*'''Lithuanian''': [[Prancūzija]]
-*'''Malay''': [[Perancis]]
-*'''Maldivian''': [[Faranseysi Vilath]]
-*'''Norwegian''': [[Frankrike]]
-*'''Polish''': [[Francja]]
-*'''Portuguese''': [[França]]
-*'''Romanian''': [[Fran&#355;a]] ''f''
-*'''Russian''': [[Франция]]
-*'''Slovene''': [[Francija]] ''f''
-*'''Spanish''': [[Francia]] ''f''
-*'''Swedish''': [[Frankrike]]
-*'''Turkish''': [[Fransa]]
-*'''Vietnamese''': [[Pháp]]
-*'''Welsh''': [[Ffrainc]] ''f''
-|}
-|}
-
-====Related terms====
-*[[Francophone]]
-*[[French]]
-*[[Frenchman]]
-
-===See also===
-*[[Countries of the world]]
-
-----
-
-==French==
-===Proper noun===
-'''France''' ''f''
-
-# France
-
-===Related terms===
-*[[français]]
-[[Category:Countries]]
-[[Category:fr:Countries]]
-
-[[et:France]]
-[[fr:France]]
-[[hi:France]]
-[[it:France]]
-[[la:France]]
-[[hu:France]]
-[[nl:France]]
-[[ja:France]]
-[[pl:France]]
-[[ro:France]]
-[[fi:France]]
-[[sv:France]]
-[[zh:France]]
+#redirect [[France]]
