--- a/wiki/dookie.wikitext
+++ b/wiki/dookie.wikitext
@@ -4,6 +4,7 @@
 '''dookie''' (plural: '''dookies''')
 # faeces
 #: ''Someone got dog dookie on my new suit!''
+#(''Supposedly'') [[ghetto]] term for a drug shaped like a cookie that is crushed with medicine and other pills to get [[high]]
 
 ===Proper noun===
 '''Dookie'''
