[[india]] moved to [[India]]: uppercase <india#173267>

--- a/wiki/India.wikitext
+++ b/wiki/India.wikitext
@@ -1,88 +1,1 @@
-
-==English==
-===Etymology===
-[[Image:Map_India_Bhopal.png|thumb|right|A map of India]]
-From Latin '''[[India]]''', derived from '''[[Indus]]''', the Indus River. '''Indus''' itself comes from the [[Persian]] form '''[[Hind]]''' (in [[Sanskrit]] '''[[Sindhu]]''').
-
-===Pronunciation===
-{| border=1 cellpadding=5
-| [[w:IPA|IPA]] || /ˈɪndiə/
-|-
-| [[w:SAMPA|SAMPA]] || /"Indi@/
-|}
-
-===Proper noun===
-# Country in South Asia. Official name: Republic of India.
-# The letter ''I'' in the [[NATO phonetic alphabet]].
-
-====Translations====
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--left column-->
-*[[Bosnian]]: Indija ''f''
-*[[Breton]]: India
-*Chinese: [[印度]] (yìn dù)
-*Danish: [[Indien]]
-*Dutch: India
-*[[Esperanto]]: [[Barato]], [[Hindujo]], [[Hindio]], [[Bharato]], [[Hinda Unio]]
-*Estonian: India
-*Finnish: [[Intia]]
-*French: [[Inde]] ''f''
-*German: [[Indien]] ''n''
-*Greek, Ancient: [[Ἰνδία]] (India) ''f''
-*Greek, Modern: [[Ινδία]] (India) ''f'' 
-*[[Gujarati]]: [[ભારત]]
-*Hebrew: [[הודו]] (Hodu)
-*[[Hindi]]: [[भारत]] (bhārata)
-*Hungarian: India
-*Indonesian: India
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--right column-->
-*[[Interlingua]]: India
-*Italian: India ''f''
-*Japanese: [[インド]] ([[印度]], Indo)
-*Kannada: [[ಭಾರತ]]
-*Latin: India ''f''
-*Malay: India
-*Maldivian: Uthuru Kara
-*Norwegian: India
-*[[Persian]]: [[هندوستان]] (Hendustan)
-*Polish: [[Indie]]
-*Portuguese: [[Índia]] ''f''
-*Romanian: India ''f''
-*Russian: [[Индия]] (Indija)
-*Slovenian: [[Indija]]
-*Spanish: India ''f''
-*Swedish: [[Indien]]
-*[[Tamil]]: [[இந்தியா]] (intiyā)
-*Turkish: [[Hindistan]]
-*Urdu: [[بهارت]] (bhārat)
-|}
-|}
-
-===Related terms===
-*[[Hind]]
-*[[Hindu]]
-*[[Hindustani]]
-*[[Indian]]
-*[[Indies]]
-*[[Sindhu]]
-*[[Urdu]]
-
-===See also===
-* [[Countries of the world]]
-* [[w:India|India]] in Wikipedia
-[[Category:Countries]]
-
-[[fr:India]]
-[[hi:India]]
-[[it:India]]
-[[hu:India]]
-[[nl:India]]
-[[pl:India]]
-[[gu:India]]
+#redirect [[India]]
