--- a/wiki/Israel.wikitext
+++ b/wiki/Israel.wikitext
@@ -1,51 +1,1 @@
-==English==
-===Pronunciation===
-*[[w:AHD|AHD]]: ĭz'rāəl
-*[[w:IPA|IPA]]: /ˈɪzreɪəl/
-*[[w:SAMPA|SAMPA]]: /"IzreI@l/
-
-===Proper noun===
-'''Israel'''
-
-# Country in the [[Middle East]], located at eastern [[shore]] of the [[Mediterranean]]. Official name: State of Israel.
-
-====Translations====
-*'''Arabic''': [[إسرائيل]]
-*'''Bosnian''': Izrael ''m''
-*'''Breton''': Israel
-*'''Catalan''': Israel ''m''
-*'''Chinese''': [[以色列]]
-*'''Czech''': [[Izrael]]
-*'''Danish''': Israel
-*'''Dutch''': [[Israël]]
-*'''Esperanto''': [[Israelo]]
-*'''Finnish''': Israel
-*'''French''': [[Israël]]
-*'''German''': Israel
-*'''Greek''': [[Ισραήλ]] ''n''
-*'''Hebrew''': [[ישראל|יִשְרָאֵל]]
-*'''Hungarian''': [[Izrael]]
-*'''Icelandic''': [[Ísrael]]
-*'''Indonesian''': Israel
-*'''Interlingua''': Israel
-*'''Italian''': [[Israele]]
-*'''Japanese''': [[イスラエル]] (isuraeru)
-*'''Polish''': [[Izrael]]
-*'''Portuguese''': Israel
-*'''Romanian''': Israel ''n''
-*'''Russian''': [[Израиль]] (Izraily)
-*'''Slovene''': [[Izrael]] ''m''
-*'''Spanish''': Israel
-*'''Swedish''': Israel
-*'''Turkish''': [[İsrail]]
-
-====Related terms====
-*[[Israeli]]
-*[[Israelite]]
-===See also===
-*[[Countries of the world]]
-*[[w:Israel|Wikipedia article on Israel]]
-
-[[hi:Israel]]
-[[pl:Israel]]
-[[Category:Countries]]
+#redirect [[Israel]]
